--- a/index.html
+++ b/index.html
@@ -4,9 +4,96 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <h1>There are different programming languages that involve web development</h1>
+
 </head>
 <body>
-    
+    <main>
+    <h1>There are different programming languages that involve web development</h1>
+
+    <h2>HTML</h2>
+     <p>
+        HTML is the standard markup language for documents designed to be displayed in a web browser. It defines the content and structure of web content.
+     </p>
+
+    <h2>CSS</h2>
+     <p>
+        It is used to style and layout web pages — for example, to alter the font, color, size, and spacing of your content, split it into multiple columns, or add animations and other decorative features.
+     </p>
+   
+    <h2>JavaScript</h2>
+      <p>
+        used to develop web pages. Developed in Netscape, JS allows developers to create a dynamic and interactive web page to interact with visitors and execute complex actions. It also enables users to load content into a document without reloading the entire page.
+      </p>
+
+      <table border="2">
+        <tr>
+          <b>
+            <th>Intials</th>
+            <th>Avatar</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Age</th>
+            <th>Favourite Colour</th>
+            <th>Wallpaper colour on their phone</th>
+         </b>
+        </tr> 
+
+        <tr>
+            <td>D.U</td>
+            <td><img src="Daniel's Avatar.webp" height="40" width="70"></td>
+            <td>Daniel</td>
+            <td>Unetor</td>
+            <td>19</td>
+            <td>Blue</td>
+            <td>Red</td>
+        </tr>
+        <tr>
+            <td>C.Q.J</td>
+            <td><img src="Chelsea's Avatar.png" height="40" width="60"></td>
+            <td>Chelsea</td>
+            <td>Julie</td>
+            <td>19</td>
+            <td>Pink</td>
+            <td>Brown</td>
+        </tr>
+        <tr>
+            <td>K.K</td>
+            <td><img src="Keira's Avatar.jpg" height="55" width="50"></td>
+            <td>Keira</td>
+            <td>Kistensamy</td>
+            <td>19</td>
+            <td>Black</td>
+            <td>White</td>
+        </tr>
+        <tr>
+            <td>A.H</td>
+            <td><img src="Awodwa's Avatar.png" height="50" width="50"></td>
+            <td>Awodwa</td>
+            <td>Hendrick</td>
+            <td>23</td>
+            <td>Magenta</td>
+            <td>Blue</td>
+        </tr>
+        <tr>
+            <td>S.D</td>
+            <td><img src="Shakeel's Avatar.webp" height="50" width="50"></td>
+            <td>Shakeel</td>
+            <td>Davids</td>
+            <td>20</td>
+            <td>Blue</td>
+            <td>Red</td>
+        </tr>
+        <tr>
+            <td>K.P</td>
+            <td><img src="Khanya's Avatar.webp" height="50" width="50"></td>
+            <td>Khanya</td>
+            <td>Pupuma</td>
+            <td>18</td>
+            <td>Black</td>
+            <td>Black and white</td>
+        </tr>
+
+      </table>
+    </main>
 </body>
 </html>
