--- a/index.html
+++ b/index.html
@@ -92,8 +92,26 @@
             <td>Black</td>
             <td>Black and white</td>
         </tr>
-
       </table>
+
+      <h3>Things I have learnt while being at life choices:</h3>
+
+        <ul>
+          <li>
+           Consistency is key if you want to achieve and excel in what you do. 
+          </li>
+          <li>
+            Watch how you speak to yourself as your words has the power to create and destroy but it's up to you how you choose to use your words.
+          </li>
+          <li>
+            Work smart and not hard and if you are stuck or don't understand, always ask questions.
+          </li>
+        </ul>
+
+
+
+
+
     </main>
 </body>
 </html>
