--- a/index.html
+++ b/index.html
@@ -108,7 +108,18 @@
           </li>
         </ul>
 
-
+        <h3>Short term goals</h3>
+        <ol>
+          <li>
+            Achieve above 80% for all projects at Life Choices.
+          </li>
+          <li>
+            Complete internship and be employed after the 12th month of the course.
+          </li>
+          <li>
+            Be a top performer and have full understanding in all languages that is taught throughout the course.
+          </li>
+        </ol>
 
 
 
