--- a/index.html
+++ b/index.html
@@ -97,31 +97,66 @@
       <h3>Things I have learnt while being at life choices:</h3>
 
         <ul>
-          <li>
-           Consistency is key if you want to achieve and excel in what you do. 
-          </li>
-          <li>
-            Watch how you speak to yourself as your words has the power to create and destroy but it's up to you how you choose to use your words.
-          </li>
-          <li>
-            Work smart and not hard and if you are stuck or don't understand, always ask questions.
-          </li>
+          <li>Consistency is key if you want to achieve and excel in what you do. </li>
+          <li>Watch how you speak to yourself as your words has the power to create and destroy but it's up to you how you choose to use your words.</li>
+          <li>Work smart and not hard and if you are stuck or don't understand, always ask questions.</li>
         </ul>
 
         <h3>Short term goals</h3>
         <ol>
-          <li>
-            Achieve above 80% for all projects at Life Choices.
-          </li>
-          <li>
-            Complete internship and be employed after the 12th month of the course.
-          </li>
-          <li>
-            Be a top performer and have full understanding in all languages that is taught throughout the course.
-          </li>
+          <li>Achieve above 80% for all projects at Life Choices.</li>
+          <li>Complete internship and be employed after the 12th month of the course.</li>
+          <li>Be a top performer and have full understanding in all languages that is taught throughout the course.</li>
         </ol>
 
+        <form>
 
+
+
+
+
+
+
+          <label for = "first name">First Name</label>
+          <input type = "text" name = "firt Name" placeholder = "First Name" id = "First Name">
+        <br>
+        <br>
+          <label for = "last name">Last Name</label>
+          <input type = "text" name = "Last Name" placeholder = "Last Name" id = "Last Name">
+        <br>
+        <br> 
+          <label for = "Date of birth">Date of birth</label>
+          <input type = "date" />
+        <br>
+        <br> 
+          <label for = "age">Age</label>
+          <input type = "number" name = "age" placeholder = "Age" id = "age">
+        <br>
+        <br>
+          <label for = "gender">Gender</label>
+        <br>
+          <label><input type = "radio" name = "male-female" value = "male">Male</label>
+          <label><input type = "radio" name = "male-female" value = "female">Female</label>
+        <br>
+        <br>
+          <label for = "ethnicity">Ethnicity</label>
+        <br>
+          <label><input type = "radio" name = "white-cloured-black" value ="white">White</label>
+          <label><input type = "radio" name = "white-cloured-black" value ="coloured">Coloured</label>
+          <label><input type = "radio" name = "white-cloured-black" value ="black">Black</label>
+        <br>
+        <br>
+          <label for = "year matriculated">Year Matriculated</label>
+          <input type = "date" name = "year matriculated" id = "year matriculated">
+        <br>
+        <br>
+          <input type = "submit">
+
+
+
+
+
+        </form>
 
     </main>
 </body>
